@@ -3,6 +3,7 @@
   <ul class="collapsed menu">
     <li class="first"><%= link_to 'Home', home_url %></li>
     <li><%= link_to 'People', people_url %></li>
+    <li><%= link_to 'My Targets', my_targets_url %></li>
   </ul>
 </div>
 <% end -%>
