@@ -1,0 +1,4 @@
+<% form_tag :controller => 'target', :action => 'create' do %>
+<%= render :partial => 'target/form' %>
+  <%= submit_tag "Add Target" %>
+<% end %>
