@@ -4,7 +4,8 @@ class TargetTest < ActiveSupport::TestCase
   fixtures :users, :targets
   
   def test_fixtures
-    assert true
+    assert targets(:ryanlowe_mri_head)
+    assert targets(:ryanlowe_rbx_head)
   end
   
   def test_required_fields
@@ -14,15 +15,17 @@ class TargetTest < ActiveSupport::TestCase
     assert_nil t.secret
     assert !t.valid?
     assert_not_nil t.secret
-    assert_equal 5, t.errors.size
+    assert_equal 6, t.errors.size
     assert t.errors.on(:creator)
     assert t.errors.on(:impl)
+    assert t.errors.on(:impl_branch)
     assert t.errors.on(:spec_version)
     assert t.errors.on(:arch)
     assert t.errors.on(:os)
     
     t.creator = users(:ryanlowe)
     t.impl = 'MRI'
+    t.impl_branch = '1.8.6'
     t.spec_version = '1.8'
     t.arch = 'Intel Core 2 Duo'
     t.os = 'Mac OS X 10.5.4'
@@ -39,6 +42,7 @@ class TargetTest < ActiveSupport::TestCase
     t = Target.new
     t.creator = users(:ryanlowe)
     t.impl = ' MRI '
+    t.impl_branch = ' 1.8.6 '
     t.spec_version = ' 1.8 '
     t.arch = ' Intel Core 2 Duo '
     t.os = ' Mac OS X 10.5.4 '
@@ -48,6 +52,7 @@ class TargetTest < ActiveSupport::TestCase
     assert_equal target_count+1, Target.count
     
     assert_equal 'MRI', t.impl
+    assert_equal '1.8.6', t.impl_branch
     assert_equal '1.8', t.spec_version
     assert_equal 'Intel Core 2 Duo', t.arch
     assert_equal 'Mac OS X 10.5.4', t.os
