@@ -1,5 +1,7 @@
 
 Sep 19
+- can add/edit targets
+= add Target controller
 = add Target model
 
 Sep 18
